--- a/opba-banking-rest-impl/src/main/resources/application.yml
+++ b/opba-banking-rest-impl/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   jpa:
     hibernate:
       naming:
-        physical-strategy: de.adorsys.opba.tppbanking.impl.config.hibernate.PrefixAndSnakeCasePhysicalNamingStrategy
+        physical-strategy: de.adorsys.opba.tppbankingapi.config.hibernate.PrefixAndSnakeCasePhysicalNamingStrategy
       # DDL is handled by Liquibase
       ddl-auto: validate
     open-in-view: false
