--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -20,6 +20,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-db-migration</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- javadoc -->
         <dependency>
             <groupId>javax.interceptor</groupId>
@@ -124,11 +130,6 @@
             <version>${xs2a-adapter.version}</version>
         </dependency>
         <!-- XS2A Adapter END -->
-
-        <dependency>
-            <groupId>org.liquibase</groupId>
-            <artifactId>liquibase-core</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
