--- a/core/bdd-sandbox/pom.xml
+++ b/core/bdd-sandbox/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>selenium-jupiter</artifactId>
-            <version>3.3.4</version>
+            <version>${selenium-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
