--- a/core/banking-protocol/src/main/resources/application.yml
+++ b/core/banking-protocol/src/main/resources/application.yml
@@ -27,6 +27,7 @@ protocol:
       ok: 'http://localhost:8080/v1/consents/confirm/accounts/#{context.getAction()}/sagas/#{execution.getRootProcessInstanceId()}'
       nok: 'http://localhost:8080/v1/consents/failed/accounts/#{context.getAction()}/sagas/#{execution.getRootProcessInstanceId()}'
     parameters:
+      max-array-size: 32
       provide-more: 'http://localhost:5500/parameters/provide-more/#{execution.getId()}?q=#{urlSafe(context.getViolations().toString())}'
       provide-psu-password: 'http://localhost:5500/parameters/provide-psu-password/#{execution.getId()}'
       select-sca-method: 'http://localhost:5500/parameters/select-sca-method/#{execution.getId()}?q=#{urlSafe(context.getAvailableSca().toString())}'
