OBG-170. Selenium based redirect

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
         <jgiven.version>1.0.0-RC3</jgiven.version>
         <wiremock.version>2.25.1</wiremock.version>
         <testcontainers.version>1.12.4</testcontainers.version>
+        <selenium-jupiter.version>3.3.4</selenium-jupiter.version>
         <slf4j-simple.version>1.7.29</slf4j-simple.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <!-- other properties -->
