--- a/core/bdd-sandbox/pom.xml
+++ b/core/bdd-sandbox/pom.xml
@@ -70,11 +70,25 @@
             <version>${testcontainers.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>selenium-jupiter</artifactId>
+            <version>${selenium-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
 
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>e2e-tests</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>bdd-wiremock</artifactId>
+            <version>0.0.6-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
