--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -90,7 +90,7 @@
 
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.7</version>
+                <version>${maven-resources-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
