--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
         <lombok-maven-plugin.version>1.18.6.0</lombok-maven-plugin.version>
         <maven.dependency.plugin.version>3.1.1</maven.dependency.plugin.version>
         <maven-remote-resources-plugin.version>1.6.0</maven-remote-resources-plugin.version>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
         <spring-framework-spring-tests.version>5.1.7.RELEASE</spring-framework-spring-tests.version>
         <mockito-core.version>2.25.1</mockito-core.version>
