--- a/core/banking-protocol/src/test/resources/application-test-one-time-postgres-ramfs.yml
+++ b/core/banking-protocol/src/test/resources/application-test-one-time-postgres-ramfs.yml
@@ -4,3 +4,16 @@ spring:
     username: postgres
     password: docker
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+  jpa:
+    hibernate:
+      naming:
+        physical-strategy: de.adorsys.opba.config.hibernate.PrefixAndSnakeCasePhysicalNamingStrategy
+      # DDL is handled by Liquibase
+      ddl-auto: validate
+    open-in-view: false
+  liquibase:
+    enabled: true
+    change-log: classpath:migration/master.xml
+    parameters:
+      table-prefix: opb_
+      fill-with-mock-data: true
