--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
         <xs2a-adapter.version>0.0.5</xs2a-adapter.version>
 
         <!-- Test libs -->
-        <jacoco.version>0.8.4</jacoco.version>
+        <jacoco.version>0.8.5</jacoco.version>
         <jupiter.version>5.5.2</jupiter.version>
         <junit.platform.commons.version>1.5.2</junit.platform.commons.version>
         <surefire.version>3.0.0-M3</surefire.version>
@@ -128,7 +128,7 @@
         <commons-lang3.version>3.0.1</commons-lang3.version>
         <google.gson.version>2.8.6</google.gson.version>
         <surefireArgLine/>
-
+        <saxon.version>8.7</saxon.version>
     </properties>
 
     <repositories>
@@ -348,29 +348,12 @@
                 <version>${jacoco.version}</version>
                 <executions>
                     <execution>
-                        <id>prepare-agent</id>
-                        <phase>validate</phase>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report-aggregate</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>report-aggregate</goal>
-                        </goals>
-                    </execution>
                 </executions>
                 <configuration>
-                    <append>true</append>
                     <propertyName>surefireArgLine</propertyName>
                 </configuration>
             </plugin>
