--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -9,9 +9,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.adorsys.opba</groupId>
     <artifactId>last-module-codecoverage</artifactId>
     <name>last-module-codecoverage</name>
+    <packaging>pom</packaging>
 
     <properties>
         <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
@@ -20,15 +20,72 @@
     </properties>
 
     <dependencies>
+        <!-- ROOT DIR -->
+        <!-- Excluding fintech-examples as they are not production code -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-protocol-facade</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-rest-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-rest-impl</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-consent-rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-embedded-starter</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- Excluding sandbox-test as it is testing framework setup -->
+
+        <!-- CORE DIR -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>banking-protocol</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <!-- Excluding bdd-tests as they are shared test code -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>bdd-wiremock</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>bdd-sandbox</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>${jacoco.version}</version>
+                    <executions>
+                        <execution>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>report-aggregate</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.7</version>
@@ -91,14 +148,11 @@
                     <dependency>
                         <groupId>net.sf.saxon</groupId>
                         <artifactId>saxon</artifactId>
-                        <version>8.7</version>
+                        <version>${saxon.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
 
         </plugins>
-
     </build>
-
-
 </project>
