--- a/last-module-codecoverage/pom.xml
+++ b/last-module-codecoverage/pom.xml
@@ -21,6 +21,28 @@
 
     <dependencies>
         <!-- ROOT DIR -->
+
+        <!-- CORE DIR -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>banking-protocol</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>bdd-sandbox</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- Excluding bdd-tests as they are shared test code -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>bdd-wiremock</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- END CORE DIR -->
+
         <!-- Excluding fintech-examples as they are not production code -->
         <dependency>
             <groupId>de.adorsys.opba</groupId>
@@ -48,26 +70,6 @@
             <version>${project.version}</version>
         </dependency>
         <!-- Excluding sandbox-test as it is testing framework setup -->
-
-        <!-- CORE DIR -->
-        <dependency>
-            <groupId>de.adorsys.opba</groupId>
-            <artifactId>banking-protocol</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <!-- Excluding bdd-tests as they are shared test code -->
-        <dependency>
-            <groupId>de.adorsys.opba</groupId>
-            <artifactId>bdd-wiremock</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>de.adorsys.opba</groupId>
-            <artifactId>bdd-sandbox</artifactId>
-            <version>${project.version}</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -84,6 +86,11 @@
                             </goals>
                         </execution>
                     </executions>
+                    <configuration>
+                        <excludes>
+                            <exclude>**/generated-sources/**</exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
 
             <plugin>
