--- a/fintech-examples/fintech-server/pom.xml
+++ b/fintech-examples/fintech-server/pom.xml
@@ -12,9 +12,9 @@
     <name>fintech-examples/fintech-server</name>
 
     <properties>
-      <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
-      Change this if depth changes. Current: /open-banking-gateway/fintech-examples/fintech-server -->
-      <main.basedir>${project.parent.parent.basedir}</main.basedir>
+        <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
+        Change this if depth changes. Current: /open-banking-gateway/fintech-examples/fintech-server -->
+        <main.basedir>${project.parent.parent.basedir}</main.basedir>
     </properties>
 
     <dependencies>
@@ -83,18 +83,31 @@
             <version>${google.gson.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
     </dependencies>
 
     <build>
+        <finalName>${artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                 <mainClass>de.adorsys.opba.fintech.server.FinTechServer</mainClass>
+                    <mainClass>de.adorsys.opba.fintech.server.FinTechServer</mainClass>
+                    <executable>true</executable>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
