--- a/opba-consent-rest-api/pom.xml
+++ b/opba-consent-rest-api/pom.xml
@@ -79,10 +79,10 @@
               <generateModelTests>false</generateModelTests>
               <configOptions>
                 <sourceFolder>src/main/java</sourceFolder>
-                <basePackage>de.adorsys.opba.consentapi</basePackage>
-                <configPackage>de.adorsys.opba.consentapi.config</configPackage>
-                <modelPackage>de.adorsys.opba.consentapi.model</modelPackage>
-                <apiPackage>de.adorsys.opba.consentapi.resource</apiPackage>
+                <basePackage>de.adorsys.opba.consentapi.generated</basePackage>
+                <configPackage>de.adorsys.opba.consentapi.config.generated</configPackage>
+                <modelPackage>de.adorsys.opba.consentapi.model.generated</modelPackage>
+                <apiPackage>de.adorsys.opba.consentapi.resource.generated</apiPackage>
                 <interfaceOnly>true</interfaceOnly>
                 <skipOverwrite>true</skipOverwrite>
                 <dateLibrary>java8</dateLibrary>
