--- a/fintech-examples/fintech-ui/package.json
+++ b/fintech-examples/fintech-ui/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-cookie-service": "^2.3.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
