OBG-209 module rename opba-db-migration -> opba-db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - postgres
     networks:
       - opba-net
-
+git
   fintech-ui:
     environment:
       - BACKEND_URL=http://fintech-server:8086
