--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -22,7 +22,7 @@
 
         <dependency>
             <groupId>de.adorsys.opba</groupId>
-            <artifactId>opba-db-migration</artifactId>
+            <artifactId>opba-db</artifactId>
             <version>${project.version}</version>
         </dependency>
 
