--- a/opba-banking-rest-impl/pom.xml
+++ b/opba-banking-rest-impl/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
-            <artifactId>opba-db-migration</artifactId>
+            <artifactId>opba-db</artifactId>
             <version>${project.version}</version>
         </dependency>
 
