--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -20,7 +20,7 @@
     <dependencies>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
-            <artifactId>opba-db-migration</artifactId>
+            <artifactId>opba-db</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
