--- a/opba-embedded-starter/src/main/resources/application.yml
+++ b/opba-embedded-starter/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   jpa:
     hibernate:
       naming:
-        physical-strategy: de.adorsys.opba.config.migration.hibernate.PrefixAndSnakeCasePhysicalNamingStrategy
+        physical-strategy: de.adorsys.opba.db.hibernate.PrefixAndSnakeCasePhysicalNamingStrategy
       # DDL is handled by Liquibase
       ddl-auto: validate
     open-in-view: false
