--- a/fintech-examples/fintech-server/Dockerfile
+++ b/fintech-examples/fintech-server/Dockerfile
@@ -1,13 +1,10 @@
 FROM openjdk:8-jre-alpine
 
-ARG JAR_FILE
-ENV JAR_FILE ${JAR_FILE}
 ENV APP_HOME /usr/app
-
 WORKDIR $APP_HOME
 
-COPY target/${JAR_FILE} ${JAR_FILE}
+COPY target/*.jar .
 
 EXPOSE 8086
 
-ENTRYPOINT ["sh", "-c", "java -jar \"${JAR_FILE}\""]
+ENTRYPOINT ["sh", "-c", "java -jar fintech-server-*.jar"]
