OBG 97 FINTECH server with database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,14 @@ services:
   fintech-server:
     environment:
       - TPP_URL=http://open-banking-gateway:8085
+      - SPRING_DATASOURCE_URL=jdbc:h2:mem:test
+      - SPRING_DATASOURCE_USERNAME=SA
+      - SPRING_DATASOURCE_PASSWORD=
+      - SPRING_DATASOURCE_DRIVER-CLASS-NAME=org.h2.Driver
+      - SERVER_SERVLET_SESSION_COOKIE_SECURE=false
+      - SERVER_SERVLET_SESSION_COOKIE_MAXAGE=200
+      - SERVER_SERVLET_SESSION_COOKIE_HTTPONLY=false
+      - SERVER_SERVLET_SESSION_COOKIE_PATH=/
     build: fintech-examples/fintech-server
     ports:
       - "18086:8086"
